--- a/templates/login.html
+++ b/templates/login.html
@@ -4,21 +4,8 @@
     <form method="POST" action="" novalidate>
         {{ form.hidden_tag()}}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Join Today</legend>
-            <div class="mb-3">
-                {{ form.username.label(class="form-label")}}
+            <legend class="border-bottom mb-4">Log In</legend>
 
-                {% if form.username.errors %}
-                {{ form.username(class="form-control form-control-lg is-invalid")}}
-                <div class="invalid-feedback">
-                    {% for error in form.username.errors %}
-                    <span>{{ error }}</span>
-                    {% endfor %}
-                </div>
-                {% else %}
-                {{ form.username(class="form-control form-control-lg")}}
-                {% endif %}
-            </div>
             <div class="mb-3">
                 {{ form.email.label(class="form-label")}}
                 {% if form.email.errors %}
@@ -45,29 +32,23 @@
                 {{ form.password(class="form-control form-control-lg")}}
                 {% endif %}
             </div>
-            <div class="mb-3">
-                {{ form.confirm_password.label(class="form-label")}}
-                {% if form.confirm_password.errors %}
-                {{ form.confirm_password(class="form-control form-control-lg is-invalid")}}
-                <div class="invalid-feedback">
-                    {% for error in form.confirm_password.errors %}
-                    <span>{{ error }}</span>
-                    {% endfor %}
-                </div>
-                {% else %}
-                {{ form.confirm_password(class="form-control form-control-lg")}}
-                {% endif %}
 
+            <div class='form-check'>
+                {{ form.remember(class="form-check-input")}}
+                {{ form.remember.label(class="form-check-label")}}
             </div>
         </fieldset>
         <div class="mb-3">
             {{ form.submit(class="btn btn-outline-info")}}
         </div>
+        <smallm class="text-muted ml-2">
+            <a href="#">Forgot Password?</a>
+        </smallm>
     </form>
 </div>
 <div class="border-top pt-3">
     <small class="text-muted">
-        Already Have an Account ? <a class="ml-2" href="{{ url_for('login')}}">Sign In</a>
+        Need an Account ? <a class="ml-2" href="{{ url_for('register')}}">Sign Up</a>
     </small>
 </div>
 {% endblock content%}
