--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -37,6 +37,9 @@
                     <ul class="navbar-nav">
                         {% if current_user.is_authenticated %}
                         <li class="nav-item">
+                            <a class="nav-link" href="/account">Account</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="/logout">Logout</a>
                         </li>
                         {% else %}
