--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -3,7 +3,8 @@
 {%block content %}
 {%for post in posts%}
 <article class="media content-section">
-    <img class="rounded-circle article-img mr-3" src="{{ url_for('static', filename='profile_pics/' + post.author.image_file)}}">
+    <img class="rounded-circle article-img mr-3"
+        src="{{ url_for('static', filename='profile_pics/' + post.author.image_file)}}">
     <div class="media-body">
         <div class="article-metadata">
             <a class="mr-2" href="#">{{post.author.username}}</a>
@@ -13,5 +14,6 @@
         <p class="article-content">{{post.content}}</p>
     </div>
 </article>
+
 {% endfor %}
 {% endblock content %}
